@@ -11,7 +11,8 @@
   :dependencies [[org.clojure/clojure "1.11.1"]
                  [ch.qos.logback/logback-classic "1.4.7"]
                  [io.pedestal/pedestal.service-tools "0.5.10"]
-                 [net.clojars.macielti/common-clj "20.32.37"]
+                 [org.postgresql/postgresql "42.7.4"]
+                 [net.clojars.macielti/common-clj "30.63.70" :exclusions [datalevin]]
                  [camel-snake-kebab "0.4.3"]
                  [danlentz/clj-uuid "0.1.9"]
                  [de.ubercode.clostache/clostache "1.4.0"]
@@ -30,23 +31,14 @@
                  [buddy/buddy-sign "3.4.333"]
                  [siili/humanize "0.1.1"]
                  [cheshire "5.11.0"]
-                 [environ "1.2.0"]
-                 [org.clojure/java.jdbc "0.3.6"]
-                 [clj-pg "0.0.3"]]
+                 [environ "1.2.0"]]
 
   :injections [(require 'hashp.core)]
 
   :resource-paths ["resources"]
 
-  :profiles {:test {:env {:clj-env "test"}}}
-
-  :repl-options {:init-ns porteiro.components}
+  :repl-options {:init-ns porteiro.v2.components}
 
   :test-paths ["test/unit" "test/integration" "test/helpers"]
 
-  :jvm-opts ^:replace ["--add-opens=java.base/java.nio=ALL-UNNAMED"
-                       "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
-                       "-XX:+UseG1GC"
-                       "-Xmx150m"]
-
-  :main porteiro.components/start-system!)
+  :main porteiro.v2.components/start-system!)
